crates/ruff_python_parser/tests/snapshots/valid_syntax@non_duplicate_type_parameter_names.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/non_duplicate_type_parameter_names.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..150,
        body: [
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 0..23,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 5..10,
                            id: Name("Alias"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 10..13,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 11..12,
                                        node_index: NodeIndex(None),
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 11..12,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Subscript(
                        ExprSubscript {
                            node_index: NodeIndex(None),
                            range: 16..23,
                            value: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 16..20,
                                    id: Name("list"),
                                    ctx: Load,
                                },
                            ),
                            slice: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 21..22,
                                    id: Name("T"),
                                    ctx: Load,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 24..43,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("f"),
                        range: 28..29,
                        node_index: NodeIndex(None),
                    },
                    type_params: Some(
                        TypeParams {
                            range: 29..32,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 30..31,
                                        node_index: NodeIndex(None),
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 30..31,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    parameters: Parameters {
                        range: 32..38,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 33..37,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 33..37,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("t"),
                                        range: 33..34,
                                        node_index: NodeIndex(None),
                                    },
                                    annotation: Some(
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 36..37,
                                                id: Name("T"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 40..43,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 40..43,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            ClassDef(
                StmtClassDef {
                    node_index: NodeIndex(None),
                    range: 44..59,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("C"),
                        range: 50..51,
                        node_index: NodeIndex(None),
                    },
                    type_params: Some(
                        TypeParams {
                            range: 51..54,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 52..53,
                                        node_index: NodeIndex(None),
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 52..53,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    arguments: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 56..59,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 56..59,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            ClassDef(
                StmtClassDef {
                    node_index: NodeIndex(None),
                    range: 60..81,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("C"),
                        range: 66..67,
                        node_index: NodeIndex(None),
                    },
                    type_params: Some(
                        TypeParams {
                            range: 67..76,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 68..69,
                                        node_index: NodeIndex(None),
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 68..69,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 71..72,
                                        node_index: NodeIndex(None),
                                        name: Identifier {
                                            id: Name("U"),
                                            range: 71..72,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 74..75,
                                        node_index: NodeIndex(None),
                                        name: Identifier {
                                            id: Name("V"),
                                            range: 74..75,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    arguments: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 78..81,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 78..81,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 82..149,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 87..92,
                            id: Name("Alias"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 92..143,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 93..94,
                                        node_index: NodeIndex(None),
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 93..94,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 96..102,
                                        node_index: NodeIndex(None),
                                        name: Identifier {
                                            id: Name("U"),
                                            range: 96..97,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 99..102,
                                                    id: Name("str"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                        default: None,
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 104..119,
                                        node_index: NodeIndex(None),
                                        name: Identifier {
                                            id: Name("V"),
                                            range: 104..105,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: Some(
                                            Tuple(
                                                ExprTuple {
                                                    node_index: NodeIndex(None),
                                                    range: 107..119,
                                                    elts: [
                                                        Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 108..111,
                                                                id: Name("str"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 113..118,
                                                                id: Name("bytes"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                    ],
                                                    ctx: Load,
                                                    parenthesized: true,
                                                },
                                            ),
                                        ),
                                        default: None,
                                    },
                                ),
                                TypeVarTuple(
                                    TypeParamTypeVarTuple {
                                        range: 121..124,
                                        node_index: NodeIndex(None),
                                        name: Identifier {
                                            id: Name("Ts"),
                                            range: 122..124,
                                            node_index: NodeIndex(None),
                                        },
                                        default: None,
                                    },
                                ),
                                ParamSpec(
                                    TypeParamParamSpec {
                                        range: 126..129,
                                        node_index: NodeIndex(None),
                                        name: Identifier {
                                            id: Name("P"),
                                            range: 128..129,
                                            node_index: NodeIndex(None),
                                        },
                                        default: None,
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 131..142,
                                        node_index: NodeIndex(None),
                                        name: Identifier {
                                            id: Name("D"),
                                            range: 131..132,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 135..142,
                                                    id: Name("default"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    value: EllipsisLiteral(
                        ExprEllipsisLiteral {
                            node_index: NodeIndex(None),
                            range: 146..149,
                        },
                    ),
                },
            ),
        ],
    },
)
```
